// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DottedPattern renders correctly - agreement background shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-agreement"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - carousel1 background shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-carousel1"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - carousel2 background shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-carousel2"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - carousel3 background shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-carousel3"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - default (with shape) 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-default"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - splash background shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-splash"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders correctly - without shape 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`DottedPattern renders default shape key correctly 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="bg-shape-default"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`DottedPattern renders with custom numeric image source 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": -1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 2346,
        "justifyContent": "center",
        "left": -284.5,
        "opacity": 0.08,
        "position": "absolute",
        "top": -506,
        "width": 1319,
      }
    }
  >
    <Image
      resizeMode="cover"
      source="dotted-pattern-image"
      style={
        [
          {
            "height": 1319,
            "width": 2346,
          },
          {
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "height": 405,
        "left": 134.5,
        "opacity": 0.4,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 481,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={42}
      style={
        [
          {
            "position": "absolute",
          },
          {
            "height": 490.617,
            "left": -37.00333,
            "top": -102.7971,
            "width": 735.0161,
          },
        ]
      }
    />
    <RNSVGSvgView
      bbHeight={405}
      bbWidth={481}
      focusable={false}
      height={405}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "flex": 0,
            "height": 405,
            "width": 481,
          },
        ]
      }
      width={481}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0.5,
                0,
                1,
                -15527149,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="shapeGradient-0cyk5rcyk5ra"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            {
              "brushRef": "shapeGradient-0cyk5rcyk5ra",
              "type": 1,
            }
          }
          height={405}
          propList={
            [
              "fill",
            ]
          }
          width={481}
          x="0"
          y="0"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": 400,
        "justifyContent": "center",
        "position": "absolute",
        "right": -120.56,
        "top": 0,
        "width": 333.751,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={400}
      bbWidth={333.751}
      focusable={false}
      height={400}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "transform": [
              {
                "scaleY": -1,
              },
            ],
          },
          {
            "flex": 0,
            "height": 400,
            "width": 333,
          },
        ]
      }
      transform={
        [
          {
            "scaleY": -1,
          },
        ]
      }
      vbHeight={400}
      vbWidth={333.751}
      width={333.751}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M124.751 400H37.2631V212.062H0V160.217H37.2631C16.5252 79.8576 75.0667 31.6855 106.93 17.6445C200.25 -31.6081 297.028 33.8457 333.751 72.7293V400H246.263V116.473C195.714 33.5216 132.312 52.7474 106.93 72.7293C74.5266 128.462 120.431 154.277 147.433 160.217H192.798V212.062H124.751V400Z"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          opacity={0.01}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
